--- a/assets/pages/admin.html
+++ b/assets/pages/admin.html
@@ -69,6 +69,7 @@
                                 <th class="px-4 py-2 text-left">ID</th>
                                 <th class="px-4 py-2 text-left">Ad</th>
                                 <th class="px-4 py-2 text-left">Müəllif</th>
+                                <th class="px-4 py-2 text-left">Kitab Qapağı</th>
                                 <th class="px-4 py-2 text-left">Əməliyyat</th>
                             </tr>
                         </thead>
@@ -116,6 +117,7 @@
             </section>
         </main>
     </div>
+    <script type="module" src="../js/admin.js"></script>
 </body>
 
 </html>
