--- a/assets/pages/admin.html
+++ b/assets/pages/admin.html
@@ -10,13 +10,10 @@
 
 <body class="bg-gray-100 font-sans">
 
-    <!-- Layout -->
     <div class="flex min-h-screen">
 
-        <!-- Sidebar -->
         <aside class="w-64 bg-red-700 text-white flex flex-col relative">
             <div class="fixed">
-                <!-- Profil -->
                 <div class="p-6 border-b border-red-600 text-center">
                     <img src="https://i.pravatar.cc/100" alt="Profil Şəkli"
                         class="w-20 h-20 mx-auto rounded-full mb-2 border-2 border-white">
@@ -24,7 +21,6 @@
                     <p class="text-sm text-red-200">elvinmenebalver123@gmail.com</p>
                 </div>
 
-                <!-- Navigasiya -->
                 <nav class="flex-1 px-4 py-6 space-y-2">
                     <a href="#dashboard" class="block py-2 px-4 rounded hover:bg-red-600 transition">📊 Dashboard</a>
                     <a href="#books" class="block py-2 px-4 rounded hover:bg-red-600 transition">📚 Kitablar</a>
@@ -33,13 +29,11 @@
                     <a href="#delete" class="block py-2 px-4 rounded hover:bg-red-600 transition">🗑️ Sil</a>
                 </nav>
 
-                <!-- Footer -->
                 <div class="p-4 text-sm border-t border-red-600">© 2025 Admin</div>
             </div>
         </aside>
 
 
-        <!-- Main Content -->
         <main class="flex-1 p-8 overflow-auto">
 
             <!-- Dashboard -->
@@ -61,7 +55,6 @@
                 </div>
             </section>
 
-            <!-- Kitab Siyahısı -->
             <section id="book-section" class="mb-12">
                 <h2 class="text-2xl font-bold mb-6 text-red-700">📚 Kitab Siyahısı</h2>
                 <div class="bg-white shadow rounded overflow-x-auto">
@@ -81,13 +74,14 @@
                 </div>
             </section>
 
-            <!-- Əlavə Et -->
             <section id="add" class="mb-12">
                 <h2 class="text-2xl font-bold mb-4 text-red-700">➕ Kitab Əlavə Et</h2>
                 <form class="bg-white p-6 rounded shadow space-y-4">
                     <input type="text" placeholder="Kitab Adı"
                         class="w-full border border-gray-300 p-3 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
                     <input type="text" placeholder="Müəllif"
+                        class="w-full border border-gray-300 p-3 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+                    <input type="text" placeholder="Kategoriya"
                         class="w-full border border-gray-300 p-3 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
                     <textarea placeholder="Qısa Təsvir"
                         class="w-full border border-gray-300 p-3 rounded focus:outline-none focus:ring-2 focus:ring-red-500"></textarea>
@@ -96,20 +90,19 @@
                 </form>
             </section>
 
-            <!-- Redaktə Et -->
             <section id="edit" class="mb-12">
                 <h2 class="text-2xl font-bold mb-4 text-red-700">✏️ Kitabı Redaktə Et</h2>
                 <form class="bg-white p-6 rounded shadow space-y-4">
                     <input type="text" placeholder="Kitab ID" class="w-full border border-gray-300 p-3 rounded" />
                     <input type="text" placeholder="Yeni Ad" class="w-full border border-gray-300 p-3 rounded" />
                     <input type="text" placeholder="Yeni Müəllif" class="w-full border border-gray-300 p-3 rounded" />
+                    <input type="text" placeholder="Kategoriya" class="w-full border border-gray-300 p-3 rounded" />
                     <textarea placeholder="Yeni Təsvir" class="w-full border border-gray-300 p-3 rounded"></textarea>
                     <button type="submit" class="bg-red-700 hover:bg-red-800 text-white px-6 py-2 rounded">Yadda
                         Saxla</button>
                 </form>
             </section>
 
-            <!-- Sil -->
             <section id="delete">
                 <h2 class="text-2xl font-bold mb-4 text-red-700">🗑️ Kitabı Sil</h2>
                 <form class="bg-white p-6 rounded shadow space-y-4">
@@ -117,7 +110,28 @@
                     <button type="submit" class="bg-red-700 hover:bg-red-800 text-white px-6 py-2 rounded">Sil</button>
                 </form>
             </section>
+
+            <div id="editModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+                <div class="bg-white p-6 rounded w-full max-w-md">
+                    <h2 class="text-xl font-bold mb-4 text-red-700">Kitabı Redaktə Et</h2>
+                    <form id="modalEditForm" class="space-y-4">
+                        <input type="hidden" id="edit-id">
+                        <input type="text" id="edit-title" placeholder="Yeni Ad" class="w-full border p-2 rounded" />
+                        <input type="text" id="edit-author" placeholder="Yeni Müəllif"
+                            class="w-full border p-2 rounded" />
+                        <textarea id="edit-description" placeholder="Yeni Təsvir"
+                            class="w-full border p-2 rounded"></textarea>
+                        <div class="flex justify-end space-x-2">
+                            <button type="button" onclick="closeModal('editModal')"
+                                class="px-4 py-2 bg-gray-300 rounded">Bağla</button>
+                            <button type="submit" class="px-4 py-2 bg-red-700 text-white rounded">Yadda Saxla</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
         </main>
+
     </div>
     <script type="module" src="../js/admin.js"></script>
 </body>
