--- a/assets/pages/detail.html
+++ b/assets/pages/detail.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div id="loader" class="loader-container">
+        <div class="loader-spinner"></div>
+    </div>
     <header id="header"></header>
     <main class="max-w-[1460px] mx-auto">
         <div class="top py-[10px_20px] text-[#767676] text-[14px]">
@@ -39,6 +42,7 @@
         </div>
     </main>
 
+    <script src="../js/loader.js"></script>
     <script type="module" src="../middleware/getHeader.js"></script>
     <script type="module" src="../js/service.js"></script>
     <script type="module" src="../js/detail.js"></script>
