--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div id="heroSwiper" class="swiper-wrapper">
                     <div class="swiper-slide slide-1"></div>
                     <div class="swiper-slide slide-2"></div>
+                    <div class="swiper-slide slide-3"></div>
                 </div>
                 <div class="swiper-pagination flex justify-center gap-[10px] bottom-[-5px]"></div>
             </div>
