--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <div id="loader" class="loader-container">
+        <div class="loader-spinner"></div>
+    </div>
     <header id="header"></header>
 
     <main class="py-10   min-h-screen">
@@ -52,16 +55,13 @@
         <div class="max-w-[1460px] mx-auto">
             <div id="books"
                 class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-6">
-                <div id="loader" class="loader-container">
-                    <div class="loader-spinner"></div>
-                </div>
             </div>
         </div>
 
     </main>
     <script src="./assets/js/loader.js"></script>
     <script type="module" src="./assets/middleware/getHeader.js"></script>
-    <script type="module" src="./assets/utils/categoryPopUp.js"></script>
+    <scr type="module" src="./assets/utils/categoryPopUp.js"></scr>
     <script type="module" src="./assets/js/service.js"></script>
     <script type="module" src="./assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
