--- a/index.html
+++ b/index.html
@@ -58,6 +58,50 @@
             </div>
         </div>
 
+        <footer class="bg-gray-100 mt-12 border-t border-gray-200">
+            <div
+                class="max-w-[1460px] mx-auto px-4 py-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 text-sm text-gray-700">
+                <div>
+                    <h3 class="text-lg font-semibold mb-4">Libraff</h3>
+                    <p class="text-gray-600">Kitabsevərlər üçün ən yaxşı seçimlər burada. Keyfiyyətli kitablar, münasib
+                        qiymətlər.</p>
+                </div>
+
+                <div>
+                    <h4 class="font-semibold mb-3">Keçidlər</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:text-blue-600 transition">Ana Səhifə</a></li>
+                        <li><a href="#" class="hover:text-blue-600 transition">Kateqoriyalar</a></li>
+                        <li><a href="#" class="hover:text-blue-600 transition">Əlaqə</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="font-semibold mb-3">Yardım</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:text-blue-600 transition">Tez-tez verilən suallar</a></li>
+                        <li><a href="#" class="hover:text-blue-600 transition">Qaytarılma şərtləri</a></li>
+                        <li><a href="#" class="hover:text-blue-600 transition">Çatdırılma</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="font-semibold mb-3">Sosial Şəbəkələr</h4>
+                    <div class="flex items-center gap-4">
+                        <a href="#" class="text-gray-600 hover:text-blue-600 text-lg"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="text-gray-600 hover:text-blue-600 text-lg"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-gray-600 hover:text-blue-600 text-lg"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center text-xs text-gray-500 py-4 border-t border-gray-200">
+                &copy; 2025 Libraff. Bütün hüquqlar qorunur.
+            </div>
+        </footer>
+
     </main>
     <script src="./assets/js/loader.js"></script>
     <script type="module" src="./assets/middleware/getHeader.js"></script>
